// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegalScreen should render Privacy correctly 1`] = `
<div>
  <div
    class="css-1688h3j"
  >
    <title>
      Privacy Policy | WorldOfTech
    </title>
    <meta
      content="WorldOfTech ('we', 'our', or 'us') is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our platform. Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the site."
      name="description"
    />
    <meta
      content="technology, tools, developer tools, system utilities, media streaming, ai resources, learning"
      name="keywords"
    />
    <meta
      content="noindex, follow"
      name="robots"
    />
    <link
      href="https://worldoftech.dev/privacy"
      rel="canonical"
    />
    <meta
      content="website"
      property="og:type"
    />
    <meta
      content="Privacy Policy"
      property="og:title"
    />
    <meta
      content="WorldOfTech ('we', 'our', or 'us') is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our platform. Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the site."
      property="og:description"
    />
    <meta
      content="https://worldoftech.dev/og-image.png"
      property="og:image"
    />
    <meta
      content="https://worldoftech.dev/privacy"
      property="og:url"
    />
    <meta
      content="WorldOfTech"
      property="og:site_name"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="Privacy Policy"
      name="twitter:title"
    />
    <meta
      content="WorldOfTech ('we', 'our', or 'us') is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our platform. Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the site."
      name="twitter:description"
    />
    <meta
      content="https://worldoftech.dev/og-image.png"
      name="twitter:image"
    />
    <meta
      content="@worldoftech"
      name="twitter:creator"
    />
    <div
      class="chakra-container css-r8xdkh"
    >
      <div
        class="chakra-stack css-1nq9ppm"
      >
        <div
          class="chakra-stack css-14k4qp8"
        >
          <h2
            class="chakra-heading css-f6v1xp"
          >
            Privacy Policy
          </h2>
          <div
            class="css-5vlmhj"
          >
            <p
              class="css-1kj10bq"
            >
              Last updated: May 12, 2026
            </p>
          </div>
          <p
            class="css-1hpvl6r"
          >
            WorldOfTech ('we', 'our', or 'us') is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our platform. Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access the site.
          </p>
        </div>
        <div
          class="chakra-stack css-1nj9xb0"
        >
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              1. Information Collection
            </h2>
            <p
              class="css-wa113s"
            >
              We do not require users to create accounts or provide personal identification information (PII) to access our curated directory. However, we may collect non-identifying information such as browser type, operating system, and IP address for the purpose of maintaining platform stability and improving user experience.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              2. Cookies and Local Storage
            </h2>
            <p
              class="css-wa113s"
            >
              We use essential cookies and browser local storage to remember your functional preferences, such as your selected theme (Light/Dark mode) and language settings. These technologies do not track your activity on external websites.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              3. External Resource Linking
            </h2>
            <p
              class="css-wa113s"
            >
              Our platform serves as a gateway to third-party resources. When you click on an external link, you are leaving WorldOfTech. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              4. Data Security
            </h2>
            <p
              class="css-wa113s"
            >
              We implement industry-standard security measures to protect the integrity of our platform. However, no method of transmission over the Internet or method of electronic storage is 100% secure, and we cannot guarantee absolute security.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              5. Children's Privacy
            </h2>
            <p
              class="css-wa113s"
            >
              Our platform is not intended for children under the age of 13. We do not knowingly collect personally identifiable information from children under 13.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              6. Contact Us
            </h2>
            <p
              class="css-wa113s"
            >
              If you have questions or comments about this Privacy Policy, please contact us at legal@worldoftech.co.in.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LegalScreen should render Terms correctly 1`] = `
<div>
  <div
    class="css-1688h3j"
  >
    <title>
      Terms of Service | WorldOfTech
    </title>
    <meta
      content="By accessing or using WorldOfTech, you agree to be bound by these Terms of Service and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using or accessing this site."
      name="description"
    />
    <meta
      content="technology, tools, developer tools, system utilities, media streaming, ai resources, learning"
      name="keywords"
    />
    <meta
      content="noindex, follow"
      name="robots"
    />
    <link
      href="https://worldoftech.dev/terms"
      rel="canonical"
    />
    <meta
      content="website"
      property="og:type"
    />
    <meta
      content="Terms of Service"
      property="og:title"
    />
    <meta
      content="By accessing or using WorldOfTech, you agree to be bound by these Terms of Service and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using or accessing this site."
      property="og:description"
    />
    <meta
      content="https://worldoftech.dev/og-image.png"
      property="og:image"
    />
    <meta
      content="https://worldoftech.dev/terms"
      property="og:url"
    />
    <meta
      content="WorldOfTech"
      property="og:site_name"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="Terms of Service"
      name="twitter:title"
    />
    <meta
      content="By accessing or using WorldOfTech, you agree to be bound by these Terms of Service and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using or accessing this site."
      name="twitter:description"
    />
    <meta
      content="https://worldoftech.dev/og-image.png"
      name="twitter:image"
    />
    <meta
      content="@worldoftech"
      name="twitter:creator"
    />
    <div
      class="chakra-container css-r8xdkh"
    >
      <div
        class="chakra-stack css-1nq9ppm"
      >
        <div
          class="chakra-stack css-14k4qp8"
        >
          <h2
            class="chakra-heading css-f6v1xp"
          >
            Terms of Service
          </h2>
          <div
            class="css-5vlmhj"
          >
            <p
              class="css-1kj10bq"
            >
              Last updated: May 12, 2026
            </p>
          </div>
          <p
            class="css-1hpvl6r"
          >
            By accessing or using WorldOfTech, you agree to be bound by these Terms of Service and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using or accessing this site.
          </p>
        </div>
        <div
          class="chakra-stack css-1nj9xb0"
        >
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              1. Use License
            </h2>
            <p
              class="css-wa113s"
            >
              Permission is granted to temporarily access the materials (information or software) on WorldOfTech for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              2. Disclaimer of Content
            </h2>
            <p
              class="css-wa113s"
            >
              The materials on WorldOfTech are provided on an 'as is' basis. WorldOfTech makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              3. Resource Ownership
            </h2>
            <p
              class="css-wa113s"
            >
              WorldOfTech does not claim ownership over the external resources listed in our directory. All trademarks, service marks, and logos are the property of their respective owners. We merely curate links to free and open-source materials available on the internet.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              4. Limitations of Liability
            </h2>
            <p
              class="css-wa113s"
            >
              In no event shall WorldOfTech or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on WorldOfTech.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              5. Prohibited Conduct
            </h2>
            <p
              class="css-wa113s"
            >
              Users agree not to engage in any automated scraping, data mining, or malicious activity that targets the WorldOfTech infrastructure. We reserve the right to block access to any user or automated system found to be in violation of these terms.
            </p>
          </div>
          <div
            class="css-4q6guf"
          >
            <div
              class="css-cmwbqk"
            />
            <h2
              class="chakra-heading css-jak30o"
            >
              6. Governing Law
            </h2>
            <p
              class="css-wa113s"
            >
              These terms and conditions are governed by and construed in accordance with the laws of the jurisdiction in which WorldOfTech operates, and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
